--- a/nexus/docker/docker-compose.yaml
+++ b/nexus/docker/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./cert/nexus.local.crt:/etc/nginx/ssl/nexus.crt:ro
-      - ./cert/nexus.local.key:/etc/nginx/ssl/nexus.key:ro
+      - ./cert/nexus.crt:/etc/nginx/ssl/nexus.crt:ro
+      - ./cert/nexus.key:/etc/nginx/ssl/nexus.key:ro
     depends_on:
       - nexus
